external-crates/move/crates/move-compiler/tests/move_2024/parser/positional_struct_fields_with_idents.exp
error[E02008]: invalid 'struct' declaration
  ┌─ tests/move_2024/parser/positional_struct_fields_with_idents.move:3:23
  │
3 │     public struct Foo(x: u64) has copy, drop;
  │                       ^^ Invalid named field declaration in a struct that can contain only positional fields

