external-crates/move/crates/move-compiler/tests/move_2024/parser/positional_struct_fields_with_idents.move
module 0x42::M {
    // Valid positional field struct declaration
    public struct Foo(x: u64) has copy, drop;
}
